--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <p>Наша разработка превращает взаимодействие с клиентами в нечто выдающееся, обеспечивая Вам <b>не просто рост продаж, а реальное лидерство на рынке.</b> Ваш магазин будет работать лучше, быстрее и понятнее, чем когда-либо.</p>
             
             <a href="https://t.me/berry_shop_example_bot" class="cta-button">🛍️ Ваш магазин может выглядеть так</a>
+            <a href="https://t.me/f4llen4ngeI" class="cta-button">👤 Связаться с нами</a>
         </div>
     </header>
 
